--- a/src/contact.html
+++ b/src/contact.html
@@ -15,7 +15,7 @@
                 <li><a href="szaj.html">Száj</a></li>
             </ul>
         </nav>
-        <header class="siteheader siteheader--dark swrap swrap--full swrap--narrow">
+        <header class="siteheader swrap swrap--full swrap--narrow">
             <a href="/" class="siteheader__logo">
                 <img src="images/logorose.svg" alt="Elysian" />
             </a>
@@ -33,7 +33,7 @@
                 </a>
             </div> -->
         </header>
-        <section class="hero hero--notop hero--dark">
+        <section class="hero hero--notop">
             <div class="hero__content">
                 <h1 class="hero__title">Érdeklődj és foglalj időpontot sminktetoválásra</h1>
                 <!-- <p>Elérhetőségeink az alábbiak</p> -->
