--- a/src/faq.html
+++ b/src/faq.html
@@ -15,7 +15,7 @@
                 <li><a href="szaj.html">Száj</a></li>
             </ul>
         </nav>
-        <header class="siteheader swrap aswrap--dark swrap--full swrap--narrow">
+        <header class="siteheader siteheader--transp swrap swrap--full swrap--narrow">
             <a href="/" class="siteheader__logo">
                 <img src="images/logorose.svg" alt="Elysian" />
             </a>
@@ -34,7 +34,7 @@
             </div> -->
         </header>
         <main role="main">
-            <div class="swrap swrap--light felezett">
+            <div class="swrap felezett">
                 <div class="">
                     <h2>Lorem ipsum dolor sit.</h2>
                     <p class="lead">
