--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
                 <li><a href="szaj.html">Száj</a></li>
             </ul>
         </nav>
-        <header class="siteheader swrap aswrap--dark swrap--full swrap--narrow">
+        <header class="siteheader siteheader--dark swrap swrap--full swrap--narrow">
             <a href="/" class="siteheader__logo">
                 <img src="images/logorose.svg" alt="Elysian" />
             </a>
@@ -43,23 +43,22 @@
                 <a href="#" class="fauxbtn">tudj meg többet</a>
             </div>
             <figure class="hero__fig">
-                <img src="https://source.unsplash.com/random/1200x900/?beauty,makeup" alt="" />
+                <img src="https://source.unsplash.com/random/1200x1000/?beauty,makeup" alt="" />
             </figure>
         </section>
 
-        <section id="service" class="swrap swrap--dark atext-center aswrap--nobtm afeles">
+        <section id="service" class="swrap swrap--light atext-center aswrap--nobtm afeles">
             <div class="">
                 <h2 class="nicetitle nicetitle--accent">
                     Természetes hatású sminktetoválás
-                    <em>Tokéletesség, boldogság, harmónia</em>
+                    <em>Tökéletesség, boldogság, harmónia</em>
                 </h2>
-                <div class="lead lead--accent">
+                <div class="lead alead--accent alead--narrow">
                     <p>
-                        Képzeld el, hogy reggel felébredsz, és tökéletes a sminked. Ez az álom
-                        könnyedén elérhető. A sminktetoválás a természetes szépséged emeli ki.
-                        Ideális megoldás azoknak akik reggel sietnek. Ajánlott még szemüveget
-                        viselőknek és azoknak akik tartósan szeretnének elrejteni egy-egy
-                        szépséghibát.
+                        Képzeld el, hogy reggel felébredsz, és tökéletes a sminked. A sminktetoválás
+                        a természetes szépséged emeli ki. Ideális megoldás azoknak akik reggel
+                        sietnek. Ajánlott még szemüveget viselőknek és azoknak akik tartósan
+                        szeretnének elrejteni egy-egy szépséghibát.
                     </p>
                 </div>
             </div>
@@ -70,7 +69,7 @@
                 <h2 class="nicetitle nicetitle--accent">Stúdiónk szolgáltatásai</h2>
                 <br />
             </div> -->
-            <div id="servicelist" class="servicelist swrap aswrap--notop">
+            <div id="servicelist" class="servicelist swrap">
                 <div class="servicecard">
                     <h3 class="servicecard__title">
                         Szemöldök tetoválás<em>Csodálatos formáért</em>
@@ -112,15 +111,21 @@
                 </div>
             </div>
         </section>
-
-        <section class="hero hero--swap hero--dark">
-            <div class="hero__content">
-                <h2 class="hero__title">Jónás Diána sminktetováló művész</h2>
+        <section id="bio" class="bio swrap swrap--light aswrap--narrow">
+            <figure class="bio__foto">
+                <img src="https://source.unsplash.com/random/1000x1300/?headshot" alt="" />
+                <!-- <figcaption>
+                        Jónás Diána
+                        <em>Sminktetováló művész</em>
+                    </figcaption> -->
+            </figure>
+            <div class="bio__content">
+                <h2 class="nicetitle">Jónás Diána<em>sminktetováló művész</em></h2>
                 <p class="hero__lead">
-                    Dia tökéletességre törekszik. Vendégei boldogan és elégedetten viselik munkája
-                    gyümölcsét.
+                    Dia tökéletességre törekszik. Vendégei boldogan és elégedetten viselik keze
+                    munkáját.
                 </p>
-                <!-- <p>
+                <p>
                     Pályályafutását szerencsés módon Hamburgban kezdte kozmetiskusként. Hazatérve
                     magával ragadata a sminktetoválás világa. Nem volt kérdés, hogy a továbbiakban
                     ezzel fog foglalkozni.
@@ -129,25 +134,25 @@
                     A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós Alexandra Academyinél
                     tanulta. Ez utóbiban később sminktetováló oktatóként is dolgozott. Négy év
                     gyakorlat után jött el az idő, hogy saját szalont nyisson.
-                </p> -->
+                </p>
                 <p>Exclusive környezetben Buda szívében várja Vendégeit!</p>
                 <a href="#" class="fauxbtn">Nézz körül a stúdióban</a>
             </div>
-            <figure class="hero__fig">
-                <img src="https://source.unsplash.com/random/1200x1000/?portraiture" alt="" />
-            </figure>
         </section>
-
-        <section id="testimonials" class="swrap swrap--light">
-            <div class="glide" style="width:100%; max-width: 1200px; margin:0 auto;">
+        <section id="testimonials" class="swrap swrap--dark">
+            <h2 class="nicetitle nicetitle--accent">
+                Vendégek mondták rólunk
+                <em>Köszönjük hogy minket választottatok</em>
+            </h2>
+            <div class="glide" style="width:100%; max-width: 1200px; margin:0 auto">
                 <div class="glide__track" data-glide-el="track">
                     <ul class="glide__slides">
                         <li class="glide__slide">
                             <blockquote class="testicard">
                                 <p>
                                     Dia egy angyalka. Gyönyörűen dolgozik, helyrehozza azt is ha
-                                    valaki elrontja az arcodat, nincs fájdalom!!!! Kedves, őszinte
-                                    lány és nagyon hangulatos kis helye van, ahol igazán le lehet
+                                    valaki elrontja az arcodat, nincs fájdalom! Kedves, őszinte lány
+                                    és nagyon hangulatos kis helye van, ahol igazán le lehet
                                     ereszteni, amíg ott vagy. Imádom
                                 </p>
                                 <cite>
@@ -204,34 +209,7 @@
                 </div>
             </div>
         </section>
-        <section id="bio" class="bio swrap swrap--dark aswrap--narrow">
-            <figure class="bio__foto">
-                <img src="https://source.unsplash.com/random/800x800/?headshot" alt="" />
-                <!-- <figcaption>
-                    Jónás Diána
-                    <em>Sminktetováló művész</em>
-                </figcaption> -->
-            </figure>
-            <div class="bio__content">
-                <h2 class="nicetitle">Jónás Diána<em>sminktetováló művész</em></h2>
-                <p class="hero__lead">
-                    Dia tökéletességre törekszik. Vendégei boldogan és elégedetten viselik munkája
-                    gyümölcsét.
-                </p>
-                <p>
-                    Pályályafutását szerencsés módon Hamburgban kezdte kozmetiskusként. Hazatérve
-                    magával ragadata a sminktetoválás világa. Nem volt kérdés, hogy a továbbiakban
-                    ezzel fog foglalkozni.
-                </p>
-                <p>
-                    A szakma mesterfogásait a Kalcsu Cosmeticsnél és Patkós Alexandra Academyinél
-                    tanulta. Ez utóbiban később sminktetováló oktatóként is dolgozott. Négy év
-                    gyakorlat után jött el az idő, hogy saját szalont nyisson.
-                </p>
-                <p>Exclusive környezetben Buda szívében várja Vendégeit!</p>
-                <a href="#" class="fauxbtn">Nézz körül a stúdióban</a>
-            </div>
-        </section>
+
         <section class="swrap promoblock">
             <img src="images/diadolgozik.jpg" alt="" />
             <div class="callout">
