--- a/src/prices.html
+++ b/src/prices.html
@@ -26,6 +26,7 @@
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Kapcsolat</a></li>
                 </ul>
+                <a href="#mobilepanel" class="menubutton">Menü</a>
             </nav>
             <!-- <div class="siteheader__section">
                 <a href="tel:+36702996999" class="btn">
@@ -166,8 +167,7 @@
         <footer class="sitefooter swrap aswrap--full swrap--narrow swrap--dark">
             <div class="sitefooter__section">
                 <ul>
-                    <li><strong>Elysian Beauty Kft.</strong></li>
-                    <li>Cégj. sz.: 9688412-23-561</li>
+                    <li><strong>Elysian Beauty Kft.</strong> | Cégj. sz.: 9688412-23-561</li>
                     <li>
                         H-1013 Budapest, Pauler utca 15.
                     </li>
@@ -178,17 +178,41 @@
                         </a>
                     </li>
                 </ul>
-            </div>
-            <div class="sitefooter__section">
-                <ul class="menu menu--vert">
-                    <li><a href="#">Adatkezelési irányelvek</a></li>
-                    <li><a href="#">Jogi nyilatkozat</a></li>
-                    <li>Site by <a href="#">Hydrogene</a></li>
+                <br />
+                <!-- <ul class="menu menu--vert">
+                        <li><a href="#">Adatkezelési irányelvek</a></li>
+                        <li><a href="#">Jogi nyilatkozat</a></li>
+                        <li>Site by <a href="#">Hydrogene</a></li>
+                    </ul>
+                    <br />
+                    <br /> -->
+                <ul class="menu menu--social">
+                    <li>
+                        <a href="#"><img src="images/icons/instagram-with-circle.svg" alt=""/></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="images/icons/facebook-with-circle.svg" alt=""/></a>
+                    </li>
                 </ul>
             </div>
-            <a href="/" class="siteheader__logo">
-                <img src="images/logorose.svg" alt="Elysian" />
-            </a>
+            <div class="sitefooter__section">
+                <a href="/" class="sitefooter__logo">
+                    <img src="images/logorose.svg" alt="Elysian" />
+                </a>
+            </div>
         </footer>
+        <section class="mobilepanel">
+            <div class="mobilepanel__inner">
+                <ul class="menu menu--mobile">
+                    <li><a href="/">Stúdió</a></li>
+                    <li class="is-active"><a href="prices.html">Árak</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="contact.html">Kapcsolat</a></li>
+                </ul>
+                <a href="#" class="mobilepanelclose"
+                    ><img src="images/icons/circle-with-cross.svg" alt=""
+                /></a>
+            </div>
+        </section>
     </body>
 </html>
