--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="contact.html">Kapcsolat</a></li>
                 </ul>
+                <a href="#mobilepanel" class="menubutton">Menü</a>
             </nav>
             <!-- <div class="siteheader__section">
                 <a href="tel:+36702996999" class="btn">
@@ -75,11 +76,11 @@
                         Szemöldök tetoválás<em>Csodálatos formáért</em>
                     </h3>
                     <p>
-                        A szemöldök emeli ki az egész arcot. A legkisebb korrekciók is nagy
-                        változásnak tűnhet. Sminktetoválással a szemöldök mindig megfelelő formáját
-                        mutatja. A szabálytalan vagy hiányzó szőrnövekedés finom pigmentációval
-                        kompenzálható. További árnyalatok növelik az expresszivitást. Az eredmény egy
-                        tökéletes ívű, de természetes hatású szemöldök.
+                        A szemöldök emeli ki az egész arcot. A legkisebb korrekció is pozitív
+                        változást eredményez. A tetovált szemöldök mindig megfelelő formáját mutatja.
+                        A szabálytalan vagy hiányzó szőrnövekedés finom pigmentációval kompenzálható.
+                        További árnyalatok növelik az expresszivitást. Az eredmény egy tökéletes ívű,
+                        de természetes hatású szemöldök.
                     </p>
                     <a href="#" class="servicecard__action fauxbtn">Részletek</a>
                 </div>
@@ -90,10 +91,9 @@
                     </h3>
                     <p>
                         Egy finom vonal a felső szemhéjon, mely diszkréten elrejti a szempillák
-                        hiányát, és kereted ad a szemnek. Emellett egy kontúrvonal az alsó szemhéjon
-                        is, a szemek alakját hangsúlyozza. Nincs több bosszantó elmosódó smink. Az
-                        kontúr tetoválása vagy pillatő sűrítése a legszebb a szem hangsúlyossá
-                        tételehéz.
+                        hiányát, és kereted ad a szemnek. Diszkrét kontúrvonal az alsó szemhéjon és a
+                        szemeid ragyogni fognak. Nincs több bosszantó elmosódó smink. Kontúr
+                        tetoválással vagy pillatő sűrítéssel szemeid tartós hangsúlyt kapnak.
                     </p>
                     <a href="#" class="servicecard__action fauxbtn">Tudj meg többet</a>
                 </div>
@@ -101,11 +101,11 @@
                 <div class="servicecard">
                     <h3 class="servicecard__title">Száj tetoválás <em>Álom ajkakért</em></h3>
                     <p>
-                        Színes, élettel teli ajkak egész nap, minden nap. A rúzsok és sminktükör már
-                        a múlté. Az egyenletlen vonalakat szabályos ívekké varázsoljuk. Választhatsz
-                        természetes színt, vagy egy divatos erősebb árnyalatot, az ajaktetoválás
-                        mindenkinek jól áll. Nincs több elmosódott kontúr, ezután ehetsz és ihatsz
-                        bátran, vagy sportolhatsz és még csókálló is!
+                        Élettel teli ajkak egész nap. Minden nap. A rúzsok és sminktükör már a múlté.
+                        Az egyenletlen vonalakat szabályos ívekké varázsoljuk. Válassz természetes
+                        színt, vagy egy divatos erősebb árnyalatot. Az ajaktetoválás mindenkinek jól
+                        áll. Nincs több elmosódott kontúr. Ehetsz, ihatsz bátran, szabadon
+                        sportolhatsz és még csókálló is!
                     </p>
                     <a href="#" class="servicecard__action fauxbtn">Szolgáltatás részletei</a>
                 </div>
@@ -122,8 +122,8 @@
             <div class="bio__content">
                 <h2 class="nicetitle">Jónás Diána<em>sminktetováló művész</em></h2>
                 <p class="hero__lead">
-                    Dia tökéletességre törekszik. Vendégei boldogan és elégedetten viselik keze
-                    munkáját.
+                    Dia a legapróbb részletekben is tökéletességre törekszik. Vendégei boldogan és
+                    elégedetten viselik kifinomult munkája eredményét.
                 </p>
                 <p>
                     Pályályafutását szerencsés módon Hamburgban kezdte kozmetiskusként. Hazatérve
@@ -223,8 +223,7 @@
         <footer class="sitefooter swrap aswrap--full swrap--narrow swrap--dark">
             <div class="sitefooter__section">
                 <ul>
-                    <li><strong>Elysian Beauty Kft.</strong></li>
-                    <li>Cégj. sz.: 9688412-23-561</li>
+                    <li><strong>Elysian Beauty Kft.</strong> | Cégj. sz.: 9688412-23-561</li>
                     <li>
                         H-1013 Budapest, Pauler utca 15.
                     </li>
@@ -235,17 +234,41 @@
                         </a>
                     </li>
                 </ul>
-            </div>
-            <div class="sitefooter__section">
-                <ul class="menu menu--vert">
+                <br />
+                <!-- <ul class="menu menu--vert">
                     <li><a href="#">Adatkezelési irányelvek</a></li>
                     <li><a href="#">Jogi nyilatkozat</a></li>
                     <li>Site by <a href="#">Hydrogene</a></li>
                 </ul>
+                <br />
+                <br /> -->
+                <ul class="menu menu--social">
+                    <li>
+                        <a href="#"><img src="images/icons/instagram-with-circle.svg" alt=""/></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="images/icons/facebook-with-circle.svg" alt=""/></a>
+                    </li>
+                </ul>
             </div>
-            <a href="/" class="siteheader__logo">
-                <img src="images/logorose.svg" alt="Elysian" />
-            </a>
+            <div class="sitefooter__section">
+                <a href="/" class="sitefooter__logo">
+                    <img src="images/logorose.svg" alt="Elysian" />
+                </a>
+            </div>
         </footer>
+        <section class="mobilepanel">
+            <div class="mobilepanel__inner">
+                <ul class="menu menu--mobile">
+                    <li class="is-active"><a href="/">Stúdió</a></li>
+                    <li><a href="prices.html">Árak</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="contact.html">Kapcsolat</a></li>
+                </ul>
+                <a href="#" class="mobilepanelclose"
+                    ><img src="images/icons/circle-with-cross.svg" alt=""
+                /></a>
+            </div>
+        </section>
     </body>
 </html>
