--- a/src/index.html
+++ b/src/index.html
@@ -44,11 +44,14 @@
                 <a href="#" class="fauxbtn">tudj meg többet</a>
             </div>
             <figure class="hero__fig">
-                <img src="https://source.unsplash.com/random/1200x1000/?beauty,makeup" alt="" />
+                <img src="images/hero-home.jpg" alt="" />
             </figure>
         </section>
 
-        <section id="service" class="swrap swrap--light atext-center aswrap--nobtm afeles">
+        <section
+            id="service"
+            class="swrap swrap--light patternized atext-center aswrap--nobtm afeles"
+        >
             <div class="">
                 <h2 class="nicetitle nicetitle--accent">
                     Természetes hatású sminktetoválás
@@ -111,7 +114,8 @@
                 </div>
             </div>
         </section>
-        <section id="bio" class="bio swrap swrap--light aswrap--narrow">
+
+        <section id="bio" class="bio swrap aswrap--light apatternized aswrap--narrow">
             <figure class="bio__foto">
                 <img src="https://source.unsplash.com/random/1000x1300/?headshot" alt="" />
                 <!-- <figcaption>
@@ -139,10 +143,10 @@
                 <a href="#" class="fauxbtn">Nézz körül a stúdióban</a>
             </div>
         </section>
-        <section id="testimonials" class="swrap swrap--dark">
+        <section id="testimonials" class="testimonials swrap swrap--light patternized">
             <h2 class="nicetitle nicetitle--accent">
-                Vendégek mondták rólunk
-                <em>Köszönjük hogy minket választottatok</em>
+                Vendégeink mondták rólunk
+                <em>Köszönjük, hogy minket választottak</em>
             </h2>
             <div class="glide" style="width:100%; max-width: 1200px; margin:0 auto">
                 <div class="glide__track" data-glide-el="track">
@@ -210,7 +214,7 @@
             </div>
         </section>
 
-        <section class="swrap promoblock">
+        <!-- <section class="swrap promoblock">
             <img src="images/diadolgozik.jpg" alt="" />
             <div class="callout">
                 <h2>Nem volt még sminktetoválásod?</h2>
@@ -219,7 +223,8 @@
                 </p>
                 <a href="#" class="btn abtn--inverse">Tudnivalók újaknak</a>
             </div>
-        </section>
+        </section> -->
+
         <footer class="sitefooter swrap aswrap--full swrap--narrow swrap--dark">
             <div class="sitefooter__section">
                 <ul>
