--- a/src/faq.html
+++ b/src/faq.html
@@ -6,15 +6,9 @@
         <meta name="description" content="" />
     </head>
     <body>
-        <nav class="subnav">
-            <!-- <h3>Sminktetoválás</h3> -->
-            <ul class="menu menu--submenu">
-                <li><a href="/">Sminketeoválás</a></li>
-                <li><a href="szemoldok.html">Szemöldök</a></li>
-                <li><a href="szemhely.html">Szemhéj</a></li>
-                <li><a href="szaj.html">Száj</a></li>
-            </ul>
-        </nav>
+        <aside class="toprow">
+            <a href="tel:+36702996999">Időpontfoglalás: +36 70 299 6999</a>
+        </aside>
         <header class="siteheader siteheader--transp swrap swrap--full swrap--narrow">
             <a href="/" class="siteheader__logo">
                 <img src="images/logorose.svg" alt="Elysian" />
@@ -28,11 +22,6 @@
                 </ul>
                 <a href="#mobilepanel" class="menubutton">Menü</a>
             </nav>
-            <!-- <div class="siteheader__section">
-                <a href="tel:+36702996999" class="btn">
-                    <small>Időpontfoglalás</small>+36 70 299 6999
-                </a>
-            </div> -->
         </header>
         <main role="main">
             <div class="swrap felezett">
@@ -105,6 +94,24 @@
                 </a>
             </div>
         </footer>
+        <nav class="subnav subnav--right">
+            <ul class="menu menu--submenu">
+                <li>
+                    <a href="mailto:studio@elysianbeauty.hu">
+                        studio@elysianbeauty.hu
+                    </a>
+                </li>
+                <li><a href="tel:+36702996999">+36 70 299 6999</a></li>
+            </ul>
+        </nav>
+        <nav class="subnav">
+            <ul class="menu menu--submenu">
+                <!-- <li><a href="/">sminkteoválás</a></li> -->
+                <li><a href="szemoldoktetovalas.html">szemöldök tetoválás</a></li>
+                <li><a href="szemhejtetovalas.html">szemhéj tetoválás</a></li>
+                <li><a href="szajtetovalas.html">száj tetoválás</a></li>
+            </ul>
+        </nav>
         <section class="mobilepanel">
             <div class="mobilepanel__inner">
                 <ul class="menu menu--mobile">
