--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,9 @@
         <meta name="description" content="" />
     </head>
     <body>
-        <nav class="subnav">
-            <!-- <h3>Sminktetoválás</h3> -->
-            <ul class="menu menu--submenu">
-                <li><a href="/">Sminketeoválás</a></li>
-                <li><a href="szemoldok.html">Szemöldök</a></li>
-                <li><a href="szemhely.html">Szemhéj</a></li>
-                <li><a href="szaj.html">Száj</a></li>
-            </ul>
-        </nav>
+        <aside class="toprow">
+            <a href="tel:+36702996999">Időpontfoglalás: +36 70 299 6999</a>
+        </aside>
         <header class="siteheader siteheader--dark swrap swrap--full swrap--narrow">
             <a href="/" class="siteheader__logo">
                 <img src="images/logorose.svg" alt="Elysian" />
@@ -28,11 +22,6 @@
                 </ul>
                 <a href="#mobilepanel" class="menubutton">Menü</a>
             </nav>
-            <!-- <div class="siteheader__section">
-                <a href="tel:+36702996999" class="btn">
-                    <small>Időpontfoglalás</small>+36 70 299 6999
-                </a>
-            </div> -->
         </header>
 
         <section class="hero hero--notop">
@@ -41,7 +30,7 @@
                 <p class="hero__lead">
                     Személyiségedet tükröző, vonásaiddal harmonizáló egyedi sminktetoválás.
                 </p>
-                <a href="#" class="fauxbtn">tudj meg többet</a>
+                <a href="#slister" class="fauxbtn">tudj meg többet</a>
             </div>
             <figure class="hero__fig">
                 <img src="images/hero-home.jpg" alt="" />
@@ -50,11 +39,11 @@
 
         <section
             id="service"
-            class="swrap swrap--light patternized atext-center aswrap--nobtm afeles"
+            class="swrap apatternized aswrap--light atext-center aswrap--nobtm afeles"
         >
             <div class="">
                 <h2 class="nicetitle nicetitle--accent">
-                    Természetes hatású sminktetoválás
+                    Természetes hatású smink&shy;tetoválás
                     <em>Tökéletesség, boldogság, harmónia</em>
                 </h2>
                 <div class="lead alead--accent alead--narrow">
@@ -85,7 +74,9 @@
                         További árnyalatok növelik az expresszivitást. Az eredmény egy tökéletes ívű,
                         de természetes hatású szemöldök.
                     </p>
-                    <a href="#" class="servicecard__action fauxbtn">Részletek</a>
+                    <a href="szemoldoktetovalas.html" class="servicecard__action fauxbtn"
+                        >Részletek</a
+                    >
                 </div>
 
                 <div class="servicecard">
@@ -98,7 +89,9 @@
                         szemeid ragyogni fognak. Nincs több bosszantó elmosódó smink. Kontúr
                         tetoválással vagy pillatő sűrítéssel szemeid tartós hangsúlyt kapnak.
                     </p>
-                    <a href="#" class="servicecard__action fauxbtn">Tudj meg többet</a>
+                    <a href="szemhejtetovalas.html" class="servicecard__action fauxbtn"
+                        >Tudj meg többet</a
+                    >
                 </div>
 
                 <div class="servicecard">
@@ -110,14 +103,16 @@
                         áll. Nincs több elmosódott kontúr. Ehetsz, ihatsz bátran, szabadon
                         sportolhatsz és még csókálló is!
                     </p>
-                    <a href="#" class="servicecard__action fauxbtn">Szolgáltatás részletei</a>
+                    <a href="szajtetovalas.html" class="servicecard__action fauxbtn"
+                        >Szolgáltatás részletei</a
+                    >
                 </div>
             </div>
         </section>
 
-        <section id="bio" class="bio swrap aswrap--light apatternized aswrap--narrow">
+        <section id="bio" class="bio swrap aswrap--light patternized aswrap--narrow">
             <figure class="bio__foto">
-                <img src="https://source.unsplash.com/random/1000x1300/?headshot" alt="" />
+                <img src="images/jonas-diana-sminktetovalo.jpg" alt="" />
                 <!-- <figcaption>
                         Jónás Diána
                         <em>Sminktetováló művész</em>
@@ -140,10 +135,11 @@
                     gyakorlat után jött el az idő, hogy saját szalont nyisson.
                 </p>
                 <p>Exclusive környezetben Buda szívében várja Vendégeit!</p>
-                <a href="#" class="fauxbtn">Nézz körül a stúdióban</a>
+                <a href="#imageswipe" class="fauxbtn">Nézz körül a stúdióban</a>
             </div>
         </section>
-        <section id="testimonials" class="testimonials swrap swrap--light patternized">
+
+        <section id="testimonials" class="testimonials swrap aswrap--light apatternized bordered">
             <h2 class="nicetitle nicetitle--accent">
                 Vendégeink mondták rólunk
                 <em>Köszönjük, hogy minket választottak</em>
@@ -214,6 +210,56 @@
             </div>
         </section>
 
+        <section
+            id="imageswipe"
+            class="imageswipe"
+            itemscope
+            itemtype="http://schema.org/ImageGallery"
+        >
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-09.jpg" alt=""/></a>
+            </figure>
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-10.jpg" alt=""/></a>
+            </figure>
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-11.jpg" alt=""/></a>
+            </figure>
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-12.jpg" alt=""/></a>
+            </figure>
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-13.jpg" alt=""/></a>
+            </figure>
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-14.jpg" alt=""/></a>
+            </figure>
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-01.jpg" alt=""/></a>
+            </figure>
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-02.jpg" alt=""/></a>
+            </figure>
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-03.jpg" alt=""/></a>
+            </figure>
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-04.jpg" alt=""/></a>
+            </figure>
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-05.jpg" alt=""/></a>
+            </figure>
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-06.jpg" alt=""/></a>
+            </figure>
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-07.jpg" alt=""/></a>
+            </figure>
+            <figure class="imageswipe__item">
+                <a href="#"><img src="images/studiophotos/elysianstudio-08.jpg" alt=""/></a>
+            </figure>
+        </section>
+
         <!-- <section class="swrap promoblock">
             <img src="images/diadolgozik.jpg" alt="" />
             <div class="callout">
@@ -262,6 +308,24 @@
                 </a>
             </div>
         </footer>
+        <nav class="subnav subnav--right">
+            <ul class="menu menu--submenu">
+                <li>
+                    <a href="mailto:studio@elysianbeauty.hu">
+                        studio@elysianbeauty.hu
+                    </a>
+                </li>
+                <li><a href="tel:+36702996999">+36 70 299 6999</a></li>
+            </ul>
+        </nav>
+        <nav class="subnav">
+            <ul class="menu menu--submenu">
+                <!-- <li><a href="/">sminkteoválás</a></li> -->
+                <li><a href="szemoldoktetovalas.html">szemöldök tetoválás</a></li>
+                <li><a href="szemhejtetovalas.html">szemhéj tetoválás</a></li>
+                <li><a href="szajtetovalas.html">száj tetoválás</a></li>
+            </ul>
+        </nav>
         <section class="mobilepanel">
             <div class="mobilepanel__inner">
                 <ul class="menu menu--mobile">
