--- a/src/szajtetovalas.html
+++ b/src/szajtetovalas.html
@@ -2,7 +2,7 @@
 <html lang="hu">
     <head>
         <meta charset="utf-8" />
-        <title>Kapcsolat | Elysian</title>
+        <title>Száj- és ajaktetoválás | Elysian</title>
         <meta name="description" content="" />
     </head>
     <body>
@@ -18,56 +18,41 @@
                     <li><a href="/">Stúdió</a></li>
                     <li><a href="prices.html">Árak</a></li>
                     <li><a href="faq.html">FAQ</a></li>
-                    <li class="is-active"><a href="contact.html">Kapcsolat</a></li>
+                    <li><a href="contact.html">Kapcsolat</a></li>
                 </ul>
                 <a href="#mobilepanel" class="menubutton">Menü</a>
             </nav>
         </header>
         <section class="hero hero--notop">
             <div class="hero__content">
-                <h1 class="hero__title">Érdeklődj és foglalj időpontot smink&shy;tetoválásra</h1>
-                <!-- <p>Elérhetőségeink az alábbiak</p> -->
+                <h1 class="hero__title">Szájtetoválás az élettel teli ajkakért</h1>
                 <p class="hero__lead">
-                    Telefon: <a href="tel:+36702996999">+36 70 299 6999</a><br />
-                    E-mail:
-                    <a href="mailto:studio@elysianbeauty.hu">
-                        studio@elysianbeauty.hu
-                    </a>
+                    Dolor sit am ipsum dolor sit amet consectetur adipisicing elit. Tempora, eum.
                 </p>
-                <a href="#" class="fauxbtn">Nyitvatartás</a>
+                <a href="#main" class="fauxbtn">tovább a részletekre</a>
             </div>
             <figure class="hero__fig">
-                <img src="https://source.unsplash.com/random/1200x800/?beauty,makeup" alt="" />
+                <img src="images/szaj.jpg" alt="" />
             </figure>
         </section>
-        <main role="main">
+
+        <main id="main" role="main">
             <div class="swrap felezett">
                 <div class="">
-                    <h2>Üzlet címe</h2>
+                    <h2>Lorem, ipsum dolor.</h2>
                     <p>
-                        <strong>Elysian Beauty Kft.</strong><br />
-                        H-1013 Budapest<br />Pauler utca 15. | <a href="#">térkép</a>
-                    </p>
-                    <p>
-                        Tel: <a href="tel:+36702996999">+36 70 299 6999</a><br />
-                        E-mail:
-                        <a href="mailto:studio@elysianbeauty.hu">
-                            studio@elysianbeauty.hu
-                        </a>
-                    </p>
-
-                    <p>
-                        <strong>Tömegközlekedés és parkolás</strong><br />
-                        Autóval a Pauler utcába a behajtás a Krisztina körút felöl a Roham utcán
-                        keresztül lehetséges. Az üzlet elött az utcan lehet parkolni (fizetös zóna).
-                        Tömegközlekedéssel a Déli pályaudvarról, A Krisztina tértöl és az Alagút
-                        úttól 5 perc sétára található az üzlet.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa odio suscipit
+                        ad sunt dolorum officiis corrupti, minus doloribus eaque ipsum excepturi,
+                        inventore dolor harum animi tenetur unde dolores rerum consequatur!
                     </p>
                 </div>
                 <div class="">
-                    <h2>Nyitvatartás</h2>
-                    <p><strong>Hétfő, Szerda, Péntek:</strong><br />09.00-17.00</p>
-                    <p><strong>Kedd, Csütörtök:</strong><br />12.00-20.00</p>
+                    <h2>Ipsum dolor sit amet consectetur.</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa odio suscipit
+                        ad sunt dolorum officiis corrupti, minus doloribus eaque ipsum excepturi,
+                        inventore dolor harum animi tenetur unde dolores rerum consequatur!
+                    </p>
                 </div>
             </div>
         </main>
@@ -87,13 +72,6 @@
                     </li>
                 </ul>
                 <br />
-                <!-- <ul class="menu menu--vert">
-                        <li><a href="#">Adatkezelési irányelvek</a></li>
-                        <li><a href="#">Jogi nyilatkozat</a></li>
-                        <li>Site by <a href="#">Hydrogene</a></li>
-                    </ul>
-                    <br />
-                    <br /> -->
                 <ul class="menu menu--social">
                     <li>
                         <a href="#"><img src="images/icons/instagram-with-circle.svg" alt=""/></a>
@@ -121,10 +99,9 @@
         </nav>
         <nav class="subnav">
             <ul class="menu menu--submenu">
-                <!-- <li><a href="/">sminkteoválás</a></li> -->
                 <li><a href="szemoldoktetovalas.html">szemöldök tetoválás</a></li>
                 <li><a href="szemhejtetovalas.html">szemhéj tetoválás</a></li>
-                <li><a href="szajtetovalas.html">száj tetoválás</a></li>
+                <li class="is-active"><a href="szajtetovalas.html">száj tetoválás</a></li>
             </ul>
         </nav>
         <section class="mobilepanel">
@@ -133,7 +110,7 @@
                     <li><a href="/">Stúdió</a></li>
                     <li><a href="prices.html">Árak</a></li>
                     <li><a href="faq.html">FAQ</a></li>
-                    <li class="is-active"><a href="contact.html">Kapcsolat</a></li>
+                    <li><a href="contact.html">Kapcsolat</a></li>
                 </ul>
                 <a href="#" class="mobilepanelclose"
                     ><img src="images/icons/circle-with-cross.svg" alt=""
