--- a/src/szemoldoktetovalas.html
+++ b/src/szemoldoktetovalas.html
@@ -37,23 +37,134 @@
         </section>
 
         <main id="main" role="main">
-            <div class="swrap felezett">
-                <div class="">
-                    <h2>Lorem, ipsum dolor.</h2>
+            <div class="swrap swrap--narrow">
+                <h1>Szemöldöktetoválás</h1>
+                <div class="lead">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa odio suscipit
-                        ad sunt dolorum officiis corrupti, minus doloribus eaque ipsum excepturi,
-                        inventore dolor harum animi tenetur unde dolores rerum consequatur!
+                        Szemöldökünk nagymértékben befolyásolja arckifejezésünket. Egy rosszul
+                        megválasztott forma teljesen megváltoztathatja az arc karakterét! Éppen
+                        ezért, a szemöldök tetoválása talán a legnagyobb kihívás a szakember számára,
+                        mert nagyon látványos átalakuláson megy keresztül a vendég.
                     </p>
                 </div>
-                <div class="">
-                    <h2>Ipsum dolor sit amet consectetur.</h2>
+            </div>
+            <div class="swrap swrap--light">
+                <h2>Szemöldök tetoválási technikák</h2>
+                <div class="lead">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa odio suscipit
-                        ad sunt dolorum officiis corrupti, minus doloribus eaque ipsum excepturi,
-                        inventore dolor harum animi tenetur unde dolores rerum consequatur!
+                        Ma már mindenki megtalálhatja azt a szemöldöktetoválási technikát, ami a
+                        leginkább személyiségéhez illik. Akár teljesen élethű, természetes
+                        microblading szemöldöktetoválástól a sminkelt, púderes hatású technikáig.
                     </p>
                 </div>
+                <div class="harmas">
+                    <div class="">
+                        <h4>I. Természetes hatású szál tetoválás</h4>
+                        <p>
+                            Az egyik legnépszerűbb tetoválás, természetessége miatt. A saját
+                            szemöldök színéhez leginkább hasonló pigmentet használva szálakat
+                            tetoválunk, ami dúsítja, kiegészíti a ritkás szemöldököt. Zsírosabb bőrű,
+                            tág pórusú vendégeknek nem ajánlott.
+                        </p>
+                    </div>
+                    <div class="">
+                        <h4>II. Sminkelt hatású “púderes/füstös” szemöldök tetoválás</h4>
+                        <p>
+                            Egyre divatosabb a púderes technika, amivel a mindennapokra is tökéletes
+                            enyhén sminkelt hatás érhető el. Színválasztástól és technikától függöen
+                            elérhetünk természetes és erösebb, sminkelt hatást is. Hosszú távon a
+                            legszebb és legfenntarthatóbb tetoválás minden bőrtípusnak.
+                        </p>
+                    </div>
+                    <div class="">
+                        <h4>Kombinált szemöldök tetoválás</h4>
+                        <p>
+                            A szemöldök elejére szálakat húzunk, de alul és a végén hangsúlyosabbá
+                            tesszük a púderes technikával. Tökéletes kombináció, de érdemes
+                            megjegyezni, hogy csak a normál vagy száraz bőrben kaphatunk szép
+                            eredményt
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="swrap swrap--dark swrap--narrow">
+                <h3>
+                    A pontos tervezés, és a megfelelő szín választás után a vendégek arcán az
+                    elégedett mosoly a legnagyobb öröm számunkra.
+                </h3>
+            </div>
+            <div class="swrap">
+                <h3>Kezelés menete, hossza</h3>
+                <p>
+                    Előrajzolás az egyik legfontosabb része a munkának. Akár 30-40 percig is
+                    készítjük az előrajzolást a legelőnyösebb eredményre törekszünk. Speciális
+                    ceruzával rajzolunk, amit nem távolítunk el a tetoválás előtt.
+                </p>
+                <p>
+                    Az érzéstelenítő felvitele után pár perccel el is kezdjük a pigment bedolgozását
+                    a bőrbe, ami újabb 30-40 percet vesz igénybe, a kezelt terület nagyságától
+                    függően.
+                </p>
+                <h3>Fájdalom</h3>
+                <p>
+                    Legkorszerűbb érzéstelenítőknek hála a fájdalom egyáltalán nem, vagy enyhén
+                    érezhető.
+                </p>
+
+                <p></p>
+                <h3>Utókezelés</h3>
+                <p>
+                    A sminktetoválás után a bőrfelületet speciális bőrfertőtlenítővel fertőtlenítem,
+                    a sminktetoválást lezáró utóápolóval lezárom. Mindenkinek saját, sterilen lezárt
+                    utóápolót adunk a további otthoni ápolásra. Az utóápolóval a következő 5-7 napban
+                    folyamatosan szigorúan vékony réteggel ápolni kell.
+                </p>
+                <h3>Korrekció és véglegesítés</h3>
+                <p>
+                    Korrekcióra 3-6 héttel a tetoválás után azért van szükség, hogy a hiányosnak vélt
+                    részeket korrigálni, az ívet és színt még alakítani tudjuk. Korrekció után éri el
+                    végleges formáját a megálmodott sminktetoválás.
+                </p>
+                <h3>Grancia és tartósság</h3>
+                <p>
+                    A sminktetoválás intenzitása és tartóssága teljesen egyénfüggő. A szemöldök és
+                    szemhéj tetoválást 1-2 évente, még a szájtetoválást elég 2-3 évente frissíteni.
+                </p>
+                <h3>Ellenjavallatok</h3>
+                <ul>
+                    <li>Betegség, láz esetén nem végezzük el a sminktetoválást.</li>
+                    <li>
+                        Krónikus vagy hosszabb betegség, állandó gyógyszerszedés esetén csak a
+                        kezelőorvos beleegyezése után készítjük el a sminktetoválást. Pl. véralvadási
+                        zavarok, cukorbetegség vagy pajzsmirigy betegség
+                    </li>
+                    <li>
+                        Terhesség és szoptatás esetén nem javasoljuk a sminktetoválások készítését,
+                        hiszen a bőrbe való beépülését is módosítja a színeknek!
+                    </li>
+                    <li>
+                        Kérjük, bejelentkezéskor tudasd velünk van-e a tetoválandó felületen
+                        anyajegyed vagy szemölcsöd!
+                    </li>
+                </ul>
+            </div>
+            <div class="swrap swrap--dark swrap--narrow">
+                <div class="lead">
+                    <p>
+                        Sminktetoválásod hosszú-hosszú ideig látható lesz, ezért fontos, hogy az
+                        tökéletesen legyen elkészítve. Nem elég meglátni azt, hogy milyen forma és
+                        szín áll jól neked, meg is kell tudni valósítani a legkorszerűbb eszközökkel.
+                        Fontos, hogy olyan szakembert válassz, aki kizárólag minőségi, leinformálható
+                        anyagokat használ munkája során.
+                    </p>
+                </div>
+            </div>
+            <div class="swrap swrap--light">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium placeat
+                    vitae quis magnam? Fugit similique aliquid dolorum eum quas repellendus a
+                    repudiandae recusandae! Exercitationem veniam molestiae illum ad eius omnis.
+                </p>
             </div>
         </main>
 
