--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,9 @@
             <div id="servicelist" class="servicelist swrap">
                 <div class="servicecard">
                     <h3 class="servicecard__title">
-                        Szemöldök tetoválás<em>Csodálatos formáért</em>
+                        <a href="szemoldoktetovalas.html">
+                            Szemöldök tetoválás<em>Csodálatos formáért</em>
+                        </a>
                     </h3>
                     <p>
                         A szemöldök emeli ki az egész arcot. A legkisebb korrekció is pozitív
@@ -81,7 +83,9 @@
 
                 <div class="servicecard">
                     <h3 class="servicecard__title">
-                        Szemhéj tetoválás<em>Elbűvölő tekintetért</em>
+                        <a href="szemhejtetovalas.html">
+                            Szemhéj tetoválás<em>Elbűvölő tekintetért</em>
+                        </a>
                     </h3>
                     <p>
                         Egy finom vonal a felső szemhéjon, mely diszkréten elrejti a szempillák
@@ -95,7 +99,9 @@
                 </div>
 
                 <div class="servicecard">
-                    <h3 class="servicecard__title">Száj tetoválás <em>Álom ajkakért</em></h3>
+                    <h3 class="servicecard__title">
+                        <a href="szajtetovalas.html"> Száj tetoválás <em>Álom ajkakért</em> </a>
+                    </h3>
                     <p>
                         Élettel teli ajkak egész nap. Minden nap. A rúzsok és sminktükör már a múlté.
                         Az egyenletlen vonalakat szabályos ívekké varázsoljuk. Válassz természetes
@@ -103,22 +109,22 @@
                         áll. Nincs több elmosódott kontúr. Ehetsz, ihatsz bátran, szabadon
                         sportolhatsz és még csókálló is!
                     </p>
-                    <a href="szajtetovalas.html" class="servicecard__action fauxbtn"
-                        >Szolgáltatás részletei</a
-                    >
+                    <a href="szajtetovalas.html" class="servicecard__action fauxbtn">
+                        Szolgáltatás részletei
+                    </a>
                 </div>
             </div>
         </section>
 
-        <section id="bio" class="bio swrap aswrap--light patternized aswrap--narrow">
-            <figure class="bio__foto">
+        <section id="bio" class="picandtext swrap patternized">
+            <figure class="picandtext__foto">
                 <img src="images/jonas-diana-sminktetovalo.jpg" alt="" />
                 <!-- <figcaption>
                         Jónás Diána
                         <em>Sminktetováló művész</em>
                     </figcaption> -->
             </figure>
-            <div class="bio__content">
+            <div class="picandtext__content">
                 <h2 class="nicetitle">Jónás Diána<em>sminktetováló művész</em></h2>
                 <p class="hero__lead">
                     Dia a legapróbb részletekben is tökéletességre törekszik. Vendégei boldogan és
