--- a/src/szemoldoktetovalas.html
+++ b/src/szemoldoktetovalas.html
@@ -29,7 +29,7 @@
                 <p class="hero__lead">
                     Tökéletes ívű szemöldököd mindig a legszebb formáját fogja mutatni.
                 </p>
-                <a href="#main" class="fauxbtn">tovább a részletekre</a>
+                <a href="#main" class="fauxbtn">mutasd a képeket</a>
             </div>
             <figure class="hero__fig">
                 <img src="images/szemoldok.jpg" alt="" />
@@ -37,118 +37,172 @@
         </section>
 
         <main id="main" role="main">
-            <div class="swrap swrap--narrow">
-                <h1>Szemöldöktetoválás</h1>
+            <div class="swrap aswrap--keskeny ">
+                <h1 class="nicetitle nicetitle--accent">
+                    Szemöldök&shy;tetoválás
+                </h1>
                 <div class="lead">
                     <p>
-                        Szemöldökünk nagymértékben befolyásolja arckifejezésünket. Egy rosszul
-                        megválasztott forma teljesen megváltoztathatja az arc karakterét! Éppen
-                        ezért, a szemöldök tetoválása talán a legnagyobb kihívás a szakember számára,
-                        mert nagyon látványos átalakuláson megy keresztül a vendég.
+                        Szemöldököd nagymértékben befolyásolja az arckifejezésedet. A szemöldökön
+                        végzet átalakítás talán a legnagyobb kihívás a szakember számára, hiszen egy
+                        helyén való-, jól eltalált korrekció nagyon látványos átalakulást eredményez.
+                        Míg egy rosszul választott forma vagy technika természet ellenes irányba
+                        változtathatja meg az arcod karakterét!
                     </p>
                 </div>
             </div>
-            <div class="swrap swrap--light">
-                <h2>Szemöldök tetoválási technikák</h2>
-                <div class="lead">
+            <div class="swrap swrap--dark picandtext bordered patternized">
+                <figure class="picandtext__foto">
+                    <img
+                        src="//source.unsplash.com/random/800x1200/?beuty,makeup"
+                        alt="Szemöldök tetoválás"
+                    />
+                    <!-- <figcaption>
+                                    Jónás Diána
+                                    <em>Sminktetováló művész</em>
+                                </figcaption> -->
+                </figure>
+                <div class="picandtext__content">
+                    <h2>Szemöldök tetoválási technikák</h2>
                     <p>
                         Ma már mindenki megtalálhatja azt a szemöldöktetoválási technikát, ami a
                         leginkább személyiségéhez illik. Akár teljesen élethű, természetes
                         microblading szemöldöktetoválástól a sminkelt, púderes hatású technikáig.
                     </p>
-                </div>
-                <div class="harmas">
-                    <div class="">
-                        <h4>I. Természetes hatású szál tetoválás</h4>
-                        <p>
-                            Az egyik legnépszerűbb tetoválás, természetessége miatt. A saját
-                            szemöldök színéhez leginkább hasonló pigmentet használva szálakat
-                            tetoválunk, ami dúsítja, kiegészíti a ritkás szemöldököt. Zsírosabb bőrű,
-                            tág pórusú vendégeknek nem ajánlott.
-                        </p>
-                    </div>
-                    <div class="">
-                        <h4>II. Sminkelt hatású “púderes/füstös” szemöldök tetoválás</h4>
-                        <p>
-                            Egyre divatosabb a púderes technika, amivel a mindennapokra is tökéletes
-                            enyhén sminkelt hatás érhető el. Színválasztástól és technikától függöen
-                            elérhetünk természetes és erösebb, sminkelt hatást is. Hosszú távon a
-                            legszebb és legfenntarthatóbb tetoválás minden bőrtípusnak.
-                        </p>
-                    </div>
-                    <div class="">
-                        <h4>Kombinált szemöldök tetoválás</h4>
-                        <p>
-                            A szemöldök elejére szálakat húzunk, de alul és a végén hangsúlyosabbá
-                            tesszük a púderes technikával. Tökéletes kombináció, de érdemes
-                            megjegyezni, hogy csak a normál vagy száraz bőrben kaphatunk szép
-                            eredményt
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="swrap swrap--dark swrap--narrow">
-                <h3>
-                    A pontos tervezés, és a megfelelő szín választás után a vendégek arcán az
-                    elégedett mosoly a legnagyobb öröm számunkra.
-                </h3>
-            </div>
-            <div class="swrap">
-                <h3>Kezelés menete, hossza</h3>
-                <p>
-                    Előrajzolás az egyik legfontosabb része a munkának. Akár 30-40 percig is
-                    készítjük az előrajzolást a legelőnyösebb eredményre törekszünk. Speciális
-                    ceruzával rajzolunk, amit nem távolítunk el a tetoválás előtt.
-                </p>
-                <p>
-                    Az érzéstelenítő felvitele után pár perccel el is kezdjük a pigment bedolgozását
-                    a bőrbe, ami újabb 30-40 percet vesz igénybe, a kezelt terület nagyságától
-                    függően.
-                </p>
-                <h3>Fájdalom</h3>
-                <p>
-                    Legkorszerűbb érzéstelenítőknek hála a fájdalom egyáltalán nem, vagy enyhén
-                    érezhető.
-                </p>
+                    <h4>I. Természetes hatású szál tetoválás</h4>
+                    <p>
+                        Az egyik legnépszerűbb tetoválás, természetessége miatt. A saját szemöldök
+                        színéhez leginkább hasonló pigmentet használva szálakat tetoválunk, ami
+                        dúsítja, kiegészíti a ritkás szemöldököt. Zsírosabb bőrű, tág pórusú
+                        vendégeknek nem ajánlott.
+                    </p>
+                    <h4>II. Sminkelt hatású “púderes/füstös” szemöldök tetoválás</h4>
+                    <p>
+                        Egyre divatosabb a púderes technika, amivel a mindennapokra is tökéletes
+                        enyhén sminkelt hatás érhető el. Színválasztástól és technikától függöen
+                        elérhetünk természetes és erösebb, sminkelt hatást is. Hosszú távon a
+                        legszebb és legfenntarthatóbb tetoválás minden bőrtípusnak.
+                    </p>
 
-                <p></p>
-                <h3>Utókezelés</h3>
-                <p>
-                    A sminktetoválás után a bőrfelületet speciális bőrfertőtlenítővel fertőtlenítem,
-                    a sminktetoválást lezáró utóápolóval lezárom. Mindenkinek saját, sterilen lezárt
-                    utóápolót adunk a további otthoni ápolásra. Az utóápolóval a következő 5-7 napban
-                    folyamatosan szigorúan vékony réteggel ápolni kell.
-                </p>
-                <h3>Korrekció és véglegesítés</h3>
-                <p>
-                    Korrekcióra 3-6 héttel a tetoválás után azért van szükség, hogy a hiányosnak vélt
-                    részeket korrigálni, az ívet és színt még alakítani tudjuk. Korrekció után éri el
-                    végleges formáját a megálmodott sminktetoválás.
-                </p>
-                <h3>Grancia és tartósság</h3>
-                <p>
-                    A sminktetoválás intenzitása és tartóssága teljesen egyénfüggő. A szemöldök és
-                    szemhéj tetoválást 1-2 évente, még a szájtetoválást elég 2-3 évente frissíteni.
-                </p>
-                <h3>Ellenjavallatok</h3>
-                <ul>
-                    <li>Betegség, láz esetén nem végezzük el a sminktetoválást.</li>
-                    <li>
-                        Krónikus vagy hosszabb betegség, állandó gyógyszerszedés esetén csak a
-                        kezelőorvos beleegyezése után készítjük el a sminktetoválást. Pl. véralvadási
-                        zavarok, cukorbetegség vagy pajzsmirigy betegség
-                    </li>
-                    <li>
-                        Terhesség és szoptatás esetén nem javasoljuk a sminktetoválások készítését,
-                        hiszen a bőrbe való beépülését is módosítja a színeknek!
-                    </li>
-                    <li>
-                        Kérjük, bejelentkezéskor tudasd velünk van-e a tetoválandó felületen
-                        anyajegyed vagy szemölcsöd!
-                    </li>
-                </ul>
+                    <h4>III. Kombinált szemöldök tetoválás</h4>
+                    <p>
+                        A szemöldök elejére szálakat húzunk, de alul és a végén hangsúlyosabbá
+                        tesszük a púderes technikával. Tökéletes kombináció, de érdemes megjegyezni,
+                        hogy csak a normál vagy száraz bőrben kaphatunk szép eredményt
+                    </p>
+                </div>
             </div>
-            <div class="swrap swrap--dark swrap--narrow">
+
+            <div class="swrap patternized bordered">
+                <div class="twocolumns copytext">
+                    <h3>Kezelés menete, hossza</h3>
+                    <p>
+                        Előrajzolás az egyik legfontosabb része a munkának. Akár 30-40 percig is
+                        készítjük az előrajzolást a legelőnyösebb eredményre törekszünk. Speciális
+                        ceruzával rajzolunk, amit nem távolítunk el a tetoválás előtt.
+                    </p>
+                    <p>
+                        Az érzéstelenítő felvitele után pár perccel el is kezdjük a pigment
+                        bedolgozását a bőrbe, ami újabb 30-40 percet vesz igénybe, a kezelt terület
+                        nagyságától függően.
+                    </p>
+                    <h3>Fájdalom</h3>
+                    <p>
+                        Legkorszerűbb érzéstelenítőknek hála a fájdalom egyáltalán nem, vagy enyhén
+                        érezhető.
+                    </p>
+
+                    <p></p>
+                    <h3>Utókezelés</h3>
+                    <p>
+                        A sminktetoválás után a bőrfelületet speciális bőrfertőtlenítővel
+                        fertőtlenítem, a sminktetoválást lezáró utóápolóval lezárom. Mindenkinek
+                        saját, sterilen lezárt utóápolót adunk a további otthoni ápolásra. Az
+                        utóápolóval a következő 5-7 napban folyamatosan szigorúan vékony réteggel
+                        ápolni kell.
+                    </p>
+                    <h3>Korrekció és véglegesítés</h3>
+                    <p>
+                        Korrekcióra 3-6 héttel a tetoválás után azért van szükség, hogy a hiányosnak
+                        vélt részeket korrigálni, az ívet és színt még alakítani tudjuk. Korrekció
+                        után éri el végleges formáját a megálmodott sminktetoválás.
+                    </p>
+                    <h3>Grancia és tartósság</h3>
+                    <p>
+                        A sminktetoválás intenzitása és tartóssága teljesen egyénfüggő. A szemöldök
+                        és szemhéj tetoválást 1-2 évente, még a szájtetoválást elég 2-3 évente
+                        frissíteni.
+                    </p>
+                    <h3>Ellenjavallatok</h3>
+                    <ul>
+                        <li>Betegség, láz esetén nem végezzük el a sminktetoválást.</li>
+                        <li>
+                            Krónikus vagy hosszabb betegség, állandó gyógyszerszedés esetén csak a
+                            kezelőorvos beleegyezése után készítjük el a sminktetoválást. Pl.
+                            véralvadási zavarok, cukorbetegség vagy pajzsmirigy betegség
+                        </li>
+                        <li>
+                            Terhesség és szoptatás esetén nem javasoljuk a sminktetoválások
+                            készítését, hiszen a bőrbe való beépülését is módosítja a színeknek!
+                        </li>
+                        <li>
+                            Kérjük, bejelentkezéskor tudasd velünk van-e a tetoválandó felületen
+                            anyajegyed vagy szemölcsöd!
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <section
+                id="imageswipe"
+                class="imageswipe imageswipe--tiny"
+                itemscope
+                itemtype="http://schema.org/ImageGallery"
+            >
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-09.jpg" alt=""/></a>
+                </figure>
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-10.jpg" alt=""/></a>
+                </figure>
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-11.jpg" alt=""/></a>
+                </figure>
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-12.jpg" alt=""/></a>
+                </figure>
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-13.jpg" alt=""/></a>
+                </figure>
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-14.jpg" alt=""/></a>
+                </figure>
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-01.jpg" alt=""/></a>
+                </figure>
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-02.jpg" alt=""/></a>
+                </figure>
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-03.jpg" alt=""/></a>
+                </figure>
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-04.jpg" alt=""/></a>
+                </figure>
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-05.jpg" alt=""/></a>
+                </figure>
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-06.jpg" alt=""/></a>
+                </figure>
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-07.jpg" alt=""/></a>
+                </figure>
+                <figure class="imageswipe__item">
+                    <a href="#"><img src="images/studiophotos/elysianstudio-08.jpg" alt=""/></a>
+                </figure>
+            </section>
+
+            <div class="swrap swrap--dark aswrap--keskeny">
                 <div class="lead">
                     <p>
                         Sminktetoválásod hosszú-hosszú ideig látható lesz, ezért fontos, hogy az
@@ -159,12 +213,11 @@
                     </p>
                 </div>
             </div>
-            <div class="swrap swrap--light">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium placeat
-                    vitae quis magnam? Fugit similique aliquid dolorum eum quas repellendus a
-                    repudiandae recusandae! Exercitationem veniam molestiae illum ad eius omnis.
-                </p>
+            <div class="swrap swrap--light aswrap--keskeny">
+                <h3>
+                    A pontos tervezés, és a megfelelő szín választás után a vendégek arcán az
+                    elégedett mosoly a legnagyobb öröm számunkra.
+                </h3>
             </div>
         </main>
 
